--- a/schedule-it/src/app/pages/intro/intro.component.tns.html
+++ b/schedule-it/src/app/pages/intro/intro.component.tns.html
@@ -18,7 +18,7 @@
 	>
 		<CarouselItem id="slide1" verticalAlignment="middle">
 			<label text="Each slide is defined in the XML." textWrap="true" margin="30"></label>
-			<label text="Slide 1" backgroundColor="#50000000" horizontalAlignment="center"></label>
+			<label text="Slide 1" horizontalAlignment="center"></label>
 
 			<label
 				text="Wrap the Carousel in a GridLayout in order to place the indicator on top (android)"
@@ -41,7 +41,7 @@
 				ios:visibility="collapsed"
 				margin="30"
 			></label>
-			<label text="Slide 2" backgroundColor="#50000000" horizontalAlignment="center"></label>
+			<label text="Slide 2" horizontalAlignment="center"></label>
 		</CarouselItem>
 
 		<CarouselItem id="slide3" verticalAlignment="middle">
@@ -50,12 +50,12 @@
 				textWrap="true"
 				margin="30"
 			></label>
-			<label text="Slide 3" backgroundColor="#50000000" horizontalAlignment="center"></label>
+			<label text="Slide 3" horizontalAlignment="center"></label>
 		</CarouselItem>
 
 		<CarouselItem id="slide4" verticalAlignment="middle">
 			<label text="Enjoy using the Carousel plugin :)" textWrap="true" margin="30"></label>
-			<label text="Slide 4" backgroundColor="#50000000" horizontalAlignment="center"></label>
+			<label text="Slide 4" horizontalAlignment="center"></label>
 		</CarouselItem>
 	</Carousel>
 </GridLayout>
