--- a/schedule-it/src/scss/vars/_colors.scss
+++ b/schedule-it/src/scss/vars/_colors.scss
@@ -1,7 +1,24 @@
 $white: #fff;
 $black: #000;
 
+$palette: (
+	'dark-shade-100': #1f2041,
+	'dark-shade-75': rgba(31, 32, 65, 0.75),
+	'dark-shade-50': rgba(31, 32, 65, 0.5),
+	'dark-shade-25': rgba(31, 32, 65, 0.25),
+	'dark-shade-5': rgba(31, 32, 65, 0.05),
+	'purple': #bc9cff,
+	'blue': #8ba4f9,
+	'green': #6fcf97,
+	'aqua': #66d2ea
+);
+
 $font: (
-	'primary': #1F2041,
-	'secondary': rgba(31, 32, 65, 0.75)
+	'primary': map-get($palette, 'dark-shade-100'),
+	'secondary': map-get($palette, 'dark-shade-75')
+);
+
+$gradient: (
+	'purple': linear-gradient(180deg, map-get($palette, 'purple') 0%, map-get($palette, 'blue') 100%),
+	'green': linear-gradient(180deg, map-get($palette, 'green') 0%, map-get($palette, 'aqua') 100%)
 );
