Add nativescript image

--- a/schedule-it/src/app/pages/intro/intro.component.tns.html
+++ b/schedule-it/src/app/pages/intro/intro.component.tns.html
@@ -42,6 +42,11 @@
 				margin="30"
 			></label>
 			<label text="Slide 2" horizontalAlignment="center"></label>
+			<NSImg #imageView
+				   verticalAlignment="center"
+				   placeholderImageUri="res://ns_logo"
+				   src="https://raw.githubusercontent.com/Akylas/nativescript-image/master/examples-data/breakfast1.jpg">
+			</NSImg>
 		</CarouselItem>
 
 		<CarouselItem id="slide3" verticalAlignment="middle">
