--- a/schedule-it/src/app/pages/intro/intro.component.scss
+++ b/schedule-it/src/app/pages/intro/intro.component.scss
@@ -1,20 +1,13 @@
 @import '../../../scss/vars/colors';
 
-#slide1 {
+#slide1,
+#slide3,
+#slide5 {
 	background: map-get($gradient, 'purple');
 	vertical-align: center;
 }
 
-#slide2 {
-	background: map-get($gradient, 'green');
-	vertical-align: center;
-}
-
-#slide3 {
-	background: map-get($gradient, 'purple');
-	vertical-align: center;
-}
-
+#slide2,
 #slide4 {
 	background: map-get($gradient, 'green');
 	vertical-align: center;
