--- a/schedule-it/src/app/pages/intro/intro.component.tns.html
+++ b/schedule-it/src/app/pages/intro/intro.component.tns.html
@@ -17,22 +17,27 @@
 		android:indicatorAnimation="WORM"
 	>
 		<CarouselItem id="slide1" verticalAlignment="middle">
-			<SVGImage horizontalAlignment="center" src="~/app/images/svg/welcome.svg"></SVGImage>
+			<label class="slide-text" text="Slide 1" horizontalAlignment="center"></label>
+			<SVGImage class="svg-container" horizontalAlignment="center" src="~/app/images/svg/welcome.svg"></SVGImage>
 		</CarouselItem>
 
 		<CarouselItem id="slide2" verticalAlignment="middle">
+			<label class="slide-text" text="Slide 2" horizontalAlignment="center"></label>
 			<SVGImage horizontalAlignment="center" src="~/app/images/svg/plan.svg"></SVGImage>
 		</CarouselItem>
 
 		<CarouselItem id="slide3" verticalAlignment="middle">
+			<label class="slide-text" text="Slide 3" horizontalAlignment="center"></label>
 			<SVGImage horizontalAlignment="center" src="~/app/images/svg/settings 2.svg"></SVGImage>
 		</CarouselItem>
 
 		<CarouselItem id="slide4" verticalAlignment="middle">
+			<label class="slide-text" text="Slide 4" horizontalAlignment="center"></label>
 			<SVGImage horizontalAlignment="center" src="~/app/images/svg/payment.svg"></SVGImage>
 		</CarouselItem>
 
 		<CarouselItem id="slide5" verticalAlignment="middle">
+			<label class="slide-text" text="Slide 5" horizontalAlignment="center"></label>
 			<SVGImage horizontalAlignment="center" src="~/app/images/svg/success.svg"></SVGImage>
 		</CarouselItem>
 	</Carousel>
