Styles refactoring, add home module, add buttons

--- a/schedule-it/src/app/pages/intro/intro.component.tns.html
+++ b/schedule-it/src/app/pages/intro/intro.component.tns.html
@@ -39,6 +39,8 @@
 		<CarouselItem id="slide5" verticalAlignment="middle">
 			<label class="slide-text" text="Slide 5" horizontalAlignment="center"></label>
 			<SVGImage horizontalAlignment="center" src="~/app/images/svg/success.svg"></SVGImage>
+
+			<button text="Let's Go!" horizontalAlignment="center" class="submit-btn" (tap)="onSubmitBtn()"></button>
 		</CarouselItem>
 	</Carousel>
 </GridLayout>
