--- a/schedule-it/src/scss/vars/_mixins.tns.scss
+++ b/schedule-it/src/scss/vars/_mixins.tns.scss
@@ -1,5 +1,5 @@
 $rem-size: 12;
 
-@mixin getRemInDp($property, $rems) {
+@mixin get-rem-in-dp($property, $rems) {
 	#{$property}: $rems * $rem-size;
 }
