--- a/schedule-it/src/scss/vars/_fonts.scss
+++ b/schedule-it/src/scss/vars/_fonts.scss
@@ -5,61 +5,73 @@ $montserrat-font: Montserrat, sans-serif;
 
 // Biggest title
 %big-title {
-	font-size: 3.5rem;
-	line-height: 4.3rem;
 	color: map-get($font, 'primary');
 	font-family: $quicksand-font;
+	font-size: 3.5rem;
 	font-style: normal;
 	font-weight: 400;
+	line-height: 4.3rem;
 }
 
 // Section heading
 %section-title {
-	font-size: 2.7rem;
-	line-height: 3.3rem;
 	color: map-get($font, 'primary');
 	font-family: $quicksand-font;
+	font-size: 2.7rem;
 	font-style: normal;
 	font-weight: 400;
+	line-height: 3.3rem;
 }
 
 // Sub-section or widget title
 %widget-title {
-	font-size: 2rem;
-	line-height: 2.5rem;
 	color: map-get($font, 'primary');
 	font-family: $quicksand-font;
+	font-size: 2rem;
 	font-style: normal;
 	font-weight: 700;
+	line-height: 2.5rem;
 }
 
 // Item title inside widgets
 %item-title {
-	font-size: 1.6rem;
-	line-height: 2rem;
 	color: map-get($font, 'primary');
 	font-family: $quicksand-font;
+	font-size: 1.6rem;
 	font-style: normal;
 	font-weight: 700;
+	line-height: 2rem;
 }
 
 // body text which is used for most of the design, like paragraphs, lists, etc.
 %body {
-	font-size: 1.2rem;
-	line-height: 2rem;
 	color: map-get($font, 'secondary');
 	font-family: $montserrat-font;
+	font-size: 1.2rem;
 	font-style: normal;
 	font-weight: 300;
+	line-height: 2rem;
 }
 
 // label or CTA text
 %label {
-	font-size: 1rem;
-	line-height: 1.25rem;
 	color: map-get($font, 'secondary');
 	font-family: $montserrat-font;
+	font-size: 1rem;
 	font-style: normal;
 	font-weight: 700;
+	line-height: 1.25rem;
 	text-transform: uppercase;
 }
+
+$mat-display-4-font-size: 3.5rem;
+$mat-display-3-font-size: 3rem;
+$mat-display-2-font-size: 2.6rem;
+$mat-display-1-font-size: 2.2rem;
+$mat-headline-font-size: 1.8rem;
+$mat-title-font-size: 1.5rem;
+$mat-subheading-2-font-size: 1rem;
+$mat-subheading-1-font-size: 0.86rem;
+$mat-body-2-font-size: 0.83rem;
+$mat-body-1-font-size: 0.8rem;
+$mat-caption-font-size: 0.75rem;
