--- a/schedule-it/src/scss/vars/_fonts.tns.scss
+++ b/schedule-it/src/scss/vars/_fonts.tns.scss
@@ -5,8 +5,8 @@ $quicksand-font: Quicksand, sans-serif;
 $montserrat-font: Montserrat, sans-serif;
 
 %big-title {
-	@include getRemInDp(font-size, 3.5);
-	@include getRemInDp(line-height, 4.3);
+	@include get-rem-in-dp(font-size, 3.5);
+	@include get-rem-in-dp(line-height, 4.3);
 	color: map-get($font, 'primary');
 	font-family: $quicksand-font;
 	font-style: normal;
@@ -15,8 +15,8 @@ $montserrat-font: Montserrat, sans-serif;
 
 // Section heading
 %section-title {
-	@include getRemInDp(font-size, 2.7);
-	@include getRemInDp(line-height, 3.3);
+	@include get-rem-in-dp(font-size, 2.7);
+	@include get-rem-in-dp(line-height, 3.3);
 	color: map-get($font, 'primary');
 	font-family: $quicksand-font;
 	font-style: normal;
@@ -25,8 +25,8 @@ $montserrat-font: Montserrat, sans-serif;
 
 // Sub-section or widget title
 %widget-title {
-	@include getRemInDp(font-size, 2);
-	@include getRemInDp(line-height, 2.5);
+	@include get-rem-in-dp(font-size, 2);
+	@include get-rem-in-dp(line-height, 2.5);
 	color: map-get($font, 'primary');
 	font-family: $quicksand-font;
 	font-style: normal;
@@ -35,8 +35,8 @@ $montserrat-font: Montserrat, sans-serif;
 
 // Item title inside widgets
 %item-title {
-	@include getRemInDp(font-size, 1.6);
-	@include getRemInDp(line-height, 2);
+	@include get-rem-in-dp(font-size, 1.6);
+	@include get-rem-in-dp(line-height, 2);
 	color: map-get($font, 'primary');
 	font-family: $quicksand-font;
 	font-style: normal;
@@ -45,8 +45,8 @@ $montserrat-font: Montserrat, sans-serif;
 
 // body text which is used for most of the design, like paragraphs, lists, etc.
 %body {
-	@include getRemInDp(font-size, 1.2);
-	@include getRemInDp(line-height, 2);
+	@include get-rem-in-dp(font-size, 1.2);
+	@include get-rem-in-dp(line-height, 2);
 	color: map-get($font, 'secondary');
 	font-family: $montserrat-font;
 	font-style: normal;
@@ -55,8 +55,8 @@ $montserrat-font: Montserrat, sans-serif;
 
 // label or CTA text
 %label {
-	@include getRemInDp(font-size, 1);
-	@include getRemInDp(line-height, 1.25);
+	@include get-rem-in-dp(font-size, 1);
+	@include get-rem-in-dp(line-height, 1.25);
 	color: map-get($font, 'secondary');
 	font-family: $montserrat-font;
 	font-style: normal;
